[DP-37] refactor: update order processing flow to adapt to new ticket-serial relationship